manifests/continuwuity/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: continuwuity
  labels:
    app: continuwuity
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: continuwuity
  template:
    metadata:
      labels:
        app: continuwuity
    spec:
      containers:
      - name: continuwuity
        image: forgejo.ellis.link/continuwuation/continuwuity:latest
        ports:
        - containerPort: 6167

        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/continuwuity/

      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: continuwuity-db-pvc
